Fix for bug 565742 (too much QIing/Addrefing/Releasing under NativeInterface2JSObject). r=smaug, a=bsmedberg.