js/src/xpconnect/src/xpcwrappednative.cpp
@@ -296,30 +296,24 @@ FinishCreate(XPCCallContext& ccx,
 // static
 nsresult
 XPCWrappedNative::GetNewOrUsed(XPCCallContext& ccx,
-                               nsISupports* Object,
+                               xpcObjectHelper& helper,
                                XPCWrappedNativeScope* Scope,
                                XPCNativeInterface* Interface,
-                               nsWrapperCache *cache,
                                JSBool isGlobal,
                                XPCWrappedNative** resultWrapper)
 {
+    nsWrapperCache *cache = helper.GetWrapperCache();
+
     NS_ASSERTION(!cache || !cache->GetWrapper(),
                  "We assume the caller already checked if it could get the "
                  "wrapper from the cache.");
 
     nsresult rv;
 
-#ifdef DEBUG
     NS_ASSERTION(!Scope->GetRuntime()->GetThreadRunningGC(), 
                  "XPCWrappedNative::GetNewOrUsed called during GC");
-    {
-        nsWrapperCache *cache2 = nsnull;
-        CallQueryInterface(Object, &cache2);
-        NS_ASSERTION(!cache == !cache2, "Caller should pass in the cache!");
-    }
-#endif
 
-    nsCOMPtr<nsISupports> identity;
+    nsISupports *identity;
 #ifdef XPC_IDISPATCH_SUPPORT
     // XXX This is done for the benefit of some warped COM implementations
     // where QI(IID_IUnknown, a.b) == QI(IID_IUnknown, a). If someone passes
@@ -329,10 +323,10 @@ XPCWrappedNative::GetNewOrUsed(XPCCallContext& ccx,
     PRBool isIDispatch = Interface &&
                          Interface->GetIID()->Equals(NSID_IDISPATCH);
     if(isIDispatch)
-        identity = Object;
+        identity = helper.Object();
     else
 #endif
-        identity = do_QueryInterface(Object);
+        identity = helper.GetCanonical();
 
     if(!identity)
     {
@@ -396,18 +390,17 @@ XPCWrappedNative::GetNewOrUsed(XPCCallContext& ccx,
     JSBool isClassInfo = Interface &&
                          Interface->GetIID()->Equals(NS_GET_IID(nsIClassInfo));
 
-    nsCOMPtr<nsIClassInfo> info;
-
-    if(!isClassInfo)
-        info = do_QueryInterface(identity);
+    nsIClassInfo *info = helper.GetClassInfo();
 
 #ifdef XPC_IDISPATCH_SUPPORT
     // If this is an IDispatch wrapper and it didn't give us a class info
     // we'll provide a default one
+    nsCOMPtr<nsIClassInfo> dispatchInfo;
     if(isIDispatch && !info)
     {
-        info = dont_AddRef(static_cast<nsIClassInfo*>
+        dispatchInfo = dont_AddRef(static_cast<nsIClassInfo*>
                                       (XPCIDispatchClassInfo::GetSingleton()));
+        info = dispatchInfo;
     }
 #endif
 
@@ -456,8 +449,8 @@ XPCWrappedNative::GetNewOrUsed(XPCCallContext& ccx,
             XPCWrappedNativeScope* betterScope =
                 XPCWrappedNativeScope::FindInJSObjectScope(ccx, parent);
             if(betterScope != Scope)
-                return GetNewOrUsed(ccx, identity, betterScope, Interface,
-                                    cache, isGlobal, resultWrapper);
+                return GetNewOrUsed(ccx, helper, betterScope, Interface,
+                                    isGlobal, resultWrapper);
 
             newParentVal = OBJECT_TO_JSVAL(parent);
         }
@@ -510,6 +503,7 @@ XPCWrappedNative::GetNewOrUsed(XPCCallContext& ccx,
     }
     else
     {
+        nsISupports *Object = helper.Object();
         if(nsXPCWrappedJSClass::IsWrappedJS(Object))
         {
             nsCOMPtr<nsIXPConnectWrappedJS> wrappedjs(do_QueryInterface(Object));
@@ -542,8 +536,8 @@ XPCWrappedNative::GetNewOrUsed(XPCCallContext& ccx,
         proto->CacheOffsets(identity);
 
         wrapper = needsXOW
-                  ? new XPCWrappedNativeWithXOW(identity.get(), proto)
-                  : new XPCWrappedNative(identity.get(), proto);
+                  ? new XPCWrappedNativeWithXOW(identity, proto)
+                  : new XPCWrappedNative(identity, proto);
         if(!wrapper)
             return NS_ERROR_FAILURE;
     }
@@ -560,8 +554,8 @@ XPCWrappedNative::GetNewOrUsed(XPCCallContext& ccx,
             return NS_ERROR_FAILURE;
 
         wrapper = needsXOW
-                  ? new XPCWrappedNativeWithXOW(identity.get(), Scope, set)
-                  : new XPCWrappedNative(identity.get(), Scope, set);
+                  ? new XPCWrappedNativeWithXOW(identity, Scope, set)
+                  : new XPCWrappedNative(identity, Scope, set);
         if(!wrapper)
             return NS_ERROR_FAILURE;
 
@@ -570,8 +564,7 @@ XPCWrappedNative::GetNewOrUsed(XPCCallContext& ccx,
 
     // The strong reference was taken over by the wrapper, so make the nsCOMPtr
     // forget about it.
-    // Note that identity is null from here on!
-    identity.forget();
+    helper.forgetCanonical();
 
     NS_ADDREF(wrapper);
 
@@ -3853,25 +3846,11 @@ static PRUint32 sSlimWrappers;
 
 JSBool
 ConstructSlimWrapper(XPCCallContext &ccx,
-                     nsISupports *p,
-                     qsObjectHelper* aHelper,
-                     nsWrapperCache* cache,
+                     xpcObjectHelper &aHelper,
                      XPCWrappedNativeScope* xpcScope, jsval *rval)
 {
-    nsCOMPtr<nsISupports> strongIdentity;
-    nsISupports* identityObj = aHelper ? aHelper->GetCanonical() : nsnull;
-    if (!identityObj) {
-      strongIdentity = do_QueryInterface(p);
-      identityObj = strongIdentity.get();
-    }
-
-    nsRefPtr<nsXPCClassInfo> classInfoHelper;
-    if (aHelper) {
-      classInfoHelper = aHelper->GetXPCClassInfo();
-    }
-    if (!classInfoHelper) {
-      CallQueryInterface(p, getter_AddRefs(classInfoHelper));
-    }
+    nsISupports *identityObj = aHelper.GetCanonical();
+    nsXPCClassInfo *classInfoHelper = aHelper.GetXPCClassInfo();
 
     JSUint32 flagsInt;
     nsresult rv = classInfoHelper->GetScriptableFlags(&flagsInt);
@@ -3915,6 +3894,7 @@ ConstructSlimWrapper(XPCCallContext &ccx,
 
     // The PreCreate hook could have forced the creation of a wrapper, need
     // to check for that here and return early.
+    nsWrapperCache *cache = aHelper.GetWrapperCache();
     JSObject* wrapper = cache->GetWrapper();
     if(wrapper)
     {
@@ -3923,16 +3903,15 @@ ConstructSlimWrapper(XPCCallContext &ccx,
         return JS_TRUE;
     }
 
-    nsIClassInfo* classInfo = classInfoHelper;
     PRUint32 interfacesBitmap = classInfoHelper->GetInterfacesBitmap();
     XPCNativeScriptableCreateInfo
-        sciProto(classInfoHelper.forget().get(), flags, interfacesBitmap);
+        sciProto(aHelper.forgetXPCClassInfo(), flags, interfacesBitmap);
 
     AutoMarkingWrappedNativeProtoPtr xpcproto(ccx);
     JSBool isGlobal = JS_FALSE;
-    xpcproto = XPCWrappedNativeProto::GetNewOrUsed(ccx, xpcScope, classInfo,
-                                                   &sciProto, JS_FALSE,
-                                                   isGlobal);
+    xpcproto = XPCWrappedNativeProto::GetNewOrUsed(ccx, xpcScope,
+                                                   classInfoHelper, &sciProto,
+                                                   JS_FALSE, isGlobal);
     if(!xpcproto)
         return JS_FALSE;
 
@@ -3952,11 +3931,7 @@ ConstructSlimWrapper(XPCCallContext &ccx,
         return JS_FALSE;
 
     // Transfer ownership to the wrapper's private.
-    if (strongIdentity) {
-        strongIdentity.forget();
-    } else {
-      aHelper->TakeCanonical();
-    }
+    aHelper.forgetCanonical();
 
     cache->SetWrapper(wrapper);
 
